# weresocool_docs

./: .babelrc  .gitignore  .prettierrc  README.md  justfile  lingui.config.js  next.config.js  package.json  styles.css  todo.md  tsconfig.json  tsconfig.tsbuildinfo
components/: CustomLink.js  Layout.js  RatioChart.tsx  WSC_with_RatioChart.tsx  WereSoCool.tsx  mdx.tsx  postComponents.tsx
concert_artists/: 1_template.json  1_template.ts  aj_salas.json  alejandro.json  alejandro.ts  andrew_fox.json  andrew_fox.ts  ayo_awosika.json  ayo_awosika.ts  beck_burger.json  bob_ladue.json  bob_ladue.ts  caleb_curtis.json  caleb_curtis.ts  caroline_davis.json  caroline_davis.ts  chris_votek.json  chris_votek.ts  cleek.json  cleek.ts  colin_stranahan.json  colin_stranahan.ts  corey_fogel.json  corey_fogel.ts  dan_tepfer.json  dan_tepfer.ts  danny_meyer.json  dina_maccabee.json  dina_maccabee.ts  dj_check_one.json  dj_check_one.ts  doors_that_dont.json  doors_that_dont.ts  eric_marandi.json  gabi_hartmann.json  gabi_hartmann.ts  gabi_hartmann_2.json  glenn_zaleski.json  grant_gordy.json  inner_movements.json  (+33 more)
danny/: about.mdx  discography.mdx  live.mdx  made_things.mdx  made_things.mdx.bak  work.json  work.jsonc  work_template.json
gigs/: gigs.mdx
interviews/: art_lande.mdx  art_lande_balance.mdx  art_lande_bassists_drummers.mdx  art_lande_chet_baker.mdx  art_lande_community.mdx  (+17 more)
wasm/: Cargo.toml
wasm/pkg/: package.json  weresocool_wasm.d.ts  weresocool_wasm.js  weresocool_wasm_bg.js  weresocool_wasm_bg.wasm  weresocool_wasm_bg.wasm.d.ts
wasm/src/: lib.rs  main.rs
(+152 files in other folders)
