[package]
name = "weresocool-wasm"
version = "0.1.0"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version="0.2.71" }
weresocool = { path = "../../weresocool", default_features=false, features=["wasm"], package="weresocool_core"}
rand = { version="0.7.3", features=["wasm-bindgen"]}
cpal = { version="0.13.1", features=["wasm-bindgen"]}
web-sys = { version="0.3", features=["console"]}
js-sys = "0.3.48"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# [profile.release]
# # Tell `rustc` to optimize for small code size.
# opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
