[package]
name = "weresocool-wasm"
version = "0.1.0"
authors = ["Danny Meyer <weresocool@xasopheno.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
weresocool = { path = "../../weresocool", default_features=false, features=["wasm"], package="weresocool"}
rand = { version="0.7.3", features=["wasm-bindgen"]}
cpal = { version="0.13.5", features=["wasm-bindgen"]}
wasm-bindgen = { version="0.2.83" }
web-sys = { version="0.3.6", features=["console"]}
js-sys = "0.3.6"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
